# server

./: .env  .gitmodules  Cargo.toml  README.md  architecture.md
scripts/: setup-db.py  update-schema.ps1  update-schema.py
src/: config.rs  db.rs  main.rs  net.rs  server.rs  util.rs
src/net/: acceptor.rs  auth.rs  message.rs  session.rs  socket.rs
src/schemas/: message.rs
