[package]
name = "server"
version = "0.1.0"
authors = ["jprochazk <honza.spacir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
tungstenite = "0.12.0"
tokio-tungstenite = "0.13.0"
futures-util = "0.3.9"
dotenv = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
deadqueue = "0.2.0"
ctrlc = { version = "3.0", features = ["termination"] }
anyhow = "1.0.38"